--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "pm2 start server.config.js",
-    "dev": "nodemon bin/www"
+    "start": "ts-node bin/www.ts",
+    "dev": "nodemon --watch ./ -e ts --exec npm run start",
+    "build": "tsc"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -17,6 +18,18 @@
     "redis": "^2.8.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/debug": "^4.1.5",
+    "@types/express": "^4.17.2",
+    "@types/mongodb": "^3.3.14",
+    "@types/morgan": "^1.7.37",
+    "@types/mysql": "^2.15.8",
+    "@types/node": "^13.1.8",
+    "@types/redis": "^2.8.14",
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.6.2",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.7.5"
   }
 }
